# computer_graphics_task_5_raytracing

./: .clang-format  CMakeLists.txt  README.md  format.sh  task5.md  task5_raytracing.md
src/: main.cpp
src/math/: Matrix4.cpp  Matrix4.hpp  Ray.cpp  Ray.hpp  Vector3.cpp  Vector3.hpp
src/rendering/: Phong.cpp  Phong.hpp  Renderer.cpp  Renderer.hpp
src/scene/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Scene.cpp  Scene.hpp  Sphere.cpp  Sphere.hpp
src/utils/: Color.cpp  Color.hpp
